# parallel_labs

./: CMakeLists.txt  README.md
1/: lab1.bat  lab1.lnk  lab1_tests.bat  rebuild_tests.bat
1/app/: CMakeLists.txt  Cluster.h  ClusterNode.h  CpuSpec.h  GpuSpec.h  LanSpec.h  RamSpec.h  main.cpp  test.cpp
1/app/import/: cpu_import.txt
1/app/main/: Cluster.h
1/app/src/: Cluster.h  ClusterNode.h  CpuSpec.h  GpuSpec.h  InputOutput.h  LanSpec.h  RamSpec.h
1/app/tests/: ClusterTest.cpp  CpuSpecTest.cpp  GpuSpecTest.cpp  LanSpecTest.cpp  RamSpecTest.cpp
1/uml/: ClassDiagram.mdj  classes_diagram.mdj
2/: block.cpp  main.cpp  main_for_diagonal.cpp
2/export/: block_matrix_export.txt  block_matrix_minus.txt  block_matrix_multiply.txt  block_matrix_plus.txt  block_matrix_scalar.txt  block_matrix_transpose.txt  dense_matrix_export.txt  dense_matrix_minus.txt  dense_matrix_minus.xml  dense_matrix_multiply.txt  dense_matrix_multiply.xml  dense_matrix_plus.txt  dense_matrix_plus.xml  dense_matrix_scalar.txt  dense_matrix_scalar.xml  dense_matrix_transpose.txt  dense_matrix_transpose.xml  diagonal_matrix_export.txt  diagonal_matrix_minus.txt  diagonal_matrix_minus.xml  diagonal_matrix_multiply.txt  diagonal_matrix_multiply.xml  diagonal_matrix_plus.txt  diagonal_matrix_plus.xml  diagonal_matrix_scalar.txt  diagonal_matrix_scalar.xml  (+2 more)
3/: build_python_app.bat  create_import_data.cpp  create_test_data.cpp  install_requirements.bat  main.cpp  plot_graph.lnk  recreate_shortcut.bat
app/: Cluster.h  ClusterNode.h  CpuSpec.h  GpuSpec.h  LanSpec.h  RamSpec.h  main.cpp
(+67 files in other folders)
